Fix overflow

--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,7 @@ body {
 
   margin: 0;
   height: 100%;
+  box-sizing: border-box;
   --m3-font-display: Rubik, system-ui, sans-serif;
   --m3-font-headline: Rubik, system-ui, sans-serif;
   --m3-font-title: Rubik, system-ui, sans-serif;
